--- a/src/style.css
+++ b/src/style.css
@@ -1,23 +1,59 @@
+:root {
+    --background-color:#f4f4f4;
+}
+
 body {
     margin: 0;
     padding: 0;
     font-family: Helvetica, sans-serif;
-    background-color: #f4f4f4;
+    background-color:var(--background-color)
   }
-  
+  img {
+    font-size: 0.5rem;
+}
   a {
     color: #000;
   }
+.larger 
+
+/* Header */
+
+.top-border {
+    width: 100%;
+    height: 6px;
+    background-color: rgb(252, 208, 155);
+}
   
+/* Search bar*/
+.search-container {
+    display: flex;
+    align-items: center;
+    position:relative;
+}
+
+.search__field{
+    width: 200px;
+    min-height: 1.8rem;
+    border-radius: 0.75rem;
+}
+.search__btn {
+    position: absolute;
+    top: 17px;
+    left: 170px;
+    border: none;
+    background-color:transparent;
+    font-size: 1.2rem;
+}
+
   /* navbar */
   
   .navbar {
     background-color: #fff;
-    box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
+    box-shadow: 1px 1px 4px 0px rgba(0,0,0,.1);
     position: fixed;
     width: 100%;
     z-index: 3;
-
+    display: flex;
   }
   
   .logo-container {
@@ -27,21 +63,24 @@ body {
 
   .navbar ul {
     margin: 0;
+    float: right;
     list-style: none;
     overflow: hidden;
-    background-color: #fff;
   }
   
+  .navbar li {
+    display: inline;
+  }
   .navbar li a {
     display: block;
-    padding: 20px 20px;
-    border-right: 1px solid #f4f4f4;
+    padding: 20px 10px;
+    border-right: 1px solid var(--background-color);
     text-decoration: none;
   }
   
   .navbar li a:hover,
   .navbar .menu-btn:hover {
-    background-color: #f4f4f4;
+    background-color: var(--background-color);
   }
   
   .navbar .logo-container__logo {
@@ -127,17 +166,9 @@ body {
   }
   
 
-
-
-
-
-
-
-
-  
   /* 48em = 768px */
   
-  @media (min-width: 48em) {
+  @media (min-width: 780px) {
     .navbar li {
       float: left;
     }
