--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 :root {
+    --main-color: rgb(252, 208, 155);
     --background-color:#f4f4f4;
 }
 
@@ -14,14 +15,18 @@ body {
   a {
     color: #000;
   }
-.larger 
 
 /* Header */
+
+header {
+position: fixed;
+top: 0;
+}
 
 .top-border {
     width: 100%;
     height: 6px;
-    background-color: rgb(252, 208, 155);
+    background-color: var(--main-color);
 }
   
 /* Search bar*/
@@ -103,7 +108,6 @@ body {
   
   .navbar .menu-icon {
     cursor: pointer;
-    display: inline-block;
     float: right;
     padding: 28px 20px;
     position: relative;
@@ -165,6 +169,35 @@ body {
     top: 0;
   }
   
+  main {
+    margin-top: 60px;
+  }
+  .main-container__intro {
+    background-image: url(./images/intro.jpg.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 80vh;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+  }
+
+.intro__description {
+    text-align: center;
+    font-size: large;
+    color: var(--main-color);
+    text-shadow:2px 2px 2px black;
+}
+.intro__btn a{
+    text-decoration: none;
+    background-color: var(--main-color);
+    font-size: 2em;
+    text-align: center;
+    border-radius: 1em;
+    padding: 5px 20px;
+}
+
 
   /* 48em = 768px */
   
