--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@ a {
   }
 .background__img {
   background-size: cover;
-  background-positio: center;
+  background-position: center;
   height: 80vh;
   display: flex;
   justify-content: space-evenly;
@@ -37,6 +37,7 @@ top: 0;
     width: 100%;
     height: 6px;
     background-color: var(--main-color);
+    z-index: 900;
 }
   
 /* Search bar*/
@@ -207,7 +208,39 @@ top: 0;
 }
 
   /* 48em = 768px */
-  
+
+/* Shop */
+.discover__grid {
+    margin-top: 70px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.discover__items {
+    width: 25%;
+    border-radius: 3px;
+    height: 30vh;
+}
+
+.suit {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.suit-one {
+    background-image: url(/src/images/suit1.jpg.jpg);
+    
+}
+.suit-two {
+    background-image: url(/src/images/suit2.jpg.jpg);
+}
+.suit-three {
+    background-image: url(/src/images/suit3.jpg.jpg);
+}
+
+
+
   @media (min-width: 780px) {
     .navbar li {
       float: left;
