--- a/style.css
+++ b/style.css
@@ -1,1 +1,91 @@
-font-family: 'Rajdhani', sans-serif;
+/* resets and commons starts here  */
+:root{
+    --font-size:1.5rem;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-weight: 400;
+    text-decoration: none;
+    list-style-type: none;
+    outline: none;
+}
+
+html{
+    background-color:#e6eaee;
+    scroll-behavior: smooth;
+    font-size: 62.5;
+    font-family: 'Rajdhani', sans-serif;
+}
+body{
+    width: 100rem;
+    margin: auto;
+}
+/* reset and commons ends here  */
+
+/* nav section starts here  */
+.logo{
+    width:80px;
+}
+.nav-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fff;
+    min-height: 5vh;
+}
+.list-elements{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color:#C27664;
+    font-size: var(--font-size);
+}
+.nav-left{
+    width: 30%;
+}
+.nav-right{
+    width: 30%;
+}
+.nav-midle{
+    width: 40%;
+    background-color: aqua;
+}
+.serch{
+    width: 80%;
+}
+/* nav section ends here  */
+
+/* main section starts here  */
+
+.banner-noimg{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 20vh;
+    background-color: #fff;
+    text-align: center;
+}
+.main-heading{
+    font-size: 5rem;
+    font-weight: 500;
+    padding-bottom: 2rem;
+}
+.description{
+    font-size: var(--font-size);
+}
+
+.banner-img{
+    height: 60vh;
+    background-image: url(/img/index-img/main-banner.jpg);
+    background-size: cover;
+}
+.banner-heading{
+    font-size: 3rem;
+    padding-bottom: 2rem;
+    font-weight: 500;
+}
+/* main section ends here  */
