--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@
         text-align: center;
         gap: 1rem;
         min-height: 100vh;
-        background:no-repeat center url(https://i.postimg.cc/XYmTWzzW/louise-viallesoubranne-5-Eh-N4wbfv-Bc-unsplash.jpg);
+        background:no-repeat center center url(https://i.postimg.cc/XYmTWzzW/louise-viallesoubranne-5-Eh-N4wbfv-Bc-unsplash.jpg);
         background-size: cover;
     }
     .back{
@@ -281,6 +281,7 @@
     .purchase__form{
         width: 250px;
     }
+    
     
 }
 /**/
