bckg fixed. finally

--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@
         background-image: url(https://i.postimg.cc/yd00rkw9/mohammad-rahmani-8q-EB0f-Te9-Vw-unsplash.jpg);
     }
     .fullstack{
-        background: url(https://i.postimg.cc/597tWxbF/stephen-phillips-hostreviews-co-uk-2k-H-6-T6x-0-I-unsplash.jpg);
+        background-image: url(https://i.postimg.cc/597tWxbF/stephen-phillips-hostreviews-co-uk-2k-H-6-T6x-0-I-unsplash.jpg);
     }
     .course-description{
         box-shadow: 0px 0px 22px 5px rgba(0,0,0,0.4);
