--- a/css/ecommerce.css
+++ b/css/ecommerce.css
@@ -26,6 +26,17 @@ html{
     box-shadow: 0px 5px 5px #0000009d;
     z-index: 1;
 }
+#main__noitem{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40%;
+    height:60%;
+    filter:drop-shadow(3px 5px 2px rgba(62, 61, 61, 0.4))
+
+
+}
 marquee{
     color: var(--text-color);
     font-size: 20px;
@@ -127,7 +138,7 @@ input[type=password]{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 h1{   
@@ -155,9 +166,9 @@ h1{
     border: none;
     cursor: pointer;
     background: none;  
-    z-index: 1; 
-      
+    z-index: 1;      
 }
+
 @keyframes cartbtn{
     from {
         transform: rotate(0deg);
