header & footer designed

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
     padding: 0;
     outline: none;
     text-decoration: none;
+
 }
 
 html{
@@ -27,6 +28,9 @@ html{
 body{
     background-image: url("/images/photo1.jpg");
     background-repeat: no-repeat;
+    width: 100%;
+    max-width: 100%;
+    margin: auto;
 
 }
 img{
@@ -34,6 +38,18 @@ img{
     height: auto;
 
 }
+.btn{
+    border: none;
+    padding: var(--padding);
+    cursor: pointer;
+    text-transform: uppercase;
+    transition: var(--transition);
+
+}
+.btn:hover{
+    background-color: rgb(172, 10, 37);
+}
+    
 
 /* reset code and common code ends here  */
 
@@ -49,6 +65,10 @@ nav{
     z-index: 100;
     
     
+}
+.nav__header{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 4rem;
 }
 /* .nav-bar{
     display: flex;
@@ -91,21 +111,6 @@ nav{
 }
 /* navbar ends here  */
 
-/* responsiveness starts here  */
-@media (max-width: 992px){
-
-    .nav-bar1{
-        flex-direction: column;
-        
-    }
-    .nav-bar2{
-        flex-direction: column;
-        gap: 1rem;
-        padding: 1rem 0;
-    }
-
-
-}
 
 
 
@@ -122,25 +127,26 @@ nav{
 
 }
 .footer{
+    align-items: center;
     background-color: rgba(237, 11, 49, 0.693);
-    min-height: 10vh;
+    min-height: 20vh;
     justify-content: space-around;
-    grid-template-areas: 33.3%;
-    padding: 0.5rem;
+    padding: 1rem;
     cursor: pointer;
     text-align: center;
     width: 100%;
     height: 100%;
-    margin-bottom: 2rem;
+    margin-bottom: 5rem;
     left: 0;
     right: 0;
+    gap: 2rem;
 }
 .footer__para{
     display: flex;
     color: #fff;
     font-size: 1.2rem;
     flex-direction: column;
-    text-align: center;
+    text-align: justify;
     float: left;
     gap: 1rem;
     padding: 0.5rem;
@@ -154,26 +160,69 @@ nav{
     flex-direction: column;
     text-align: center;
     align-items:flex-end;
+ 
     
 }
 .footer__subscription{
     color: #fff;
     display:flex;
-    
-    align-content: center;
-    
-
-    
-    
-    
-
-    
-    
+    padding: 0.5rem;
+    margin-left: 10%;
+    font-size: 1.3rem;
+}
+.btn__sub{
+    margin-left: -5px;
 
 }
+.footer__sub{
+    border: none;
+    padding: var(--padding);
+    width: 20rem;
+}
+.footer__link{
+    display: flex;
+    color: #fff;
+}
+.copy-right{
+    display: flex;
+    
+}
+.copyright{
+    color: #fff;
+    font-size: 1.2rem;
+    
+    
+}
+ 
+    
+    
+
+    
+    
+    
+
+    
+    
+
+
 
 /* footer section ends here */
 
+/* responsiveness starts here  */
+@media (max-width: 992px){
+
+    .nav-bar1{
+        flex-direction: column;
+        
+    }
+    .nav-bar2{
+        flex-direction: column;
+        gap: 1rem;
+        padding: 1rem 0;
+    }
+
+
+}
 
 
 @media (max-width: 768px){
