--- a/style.css
+++ b/style.css
@@ -23,11 +23,19 @@ body{
     width: 100rem;
     margin: auto;
 }
+.card__heading{
+    font-weight: 800;
+}
+.nav-link{
+    font-weight: 500;
+    color: black;
+
+}
 /* reset and commons ends here  */
 
 /* nav section starts here  */
 .logo{
-    width:80px;
+    width:60px;
 }
 .nav-bar{
     display: flex;
@@ -50,8 +58,10 @@ body{
     width: 30%;
 }
 .nav-midle{
+    display: flex;
+    justify-content: center;
     width: 40%;
-    background-color: aqua;
+
 }
 .serch{
     width: 80%;
@@ -76,16 +86,103 @@ body{
 }
 .description{
     font-size: var(--font-size);
+    text-align: center;
 }
 
 .banner-img{
     height: 60vh;
     background-image: url(/img/index-img/main-banner.jpg);
     background-size: cover;
+    position: relative;
+}
+.banner-description{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: center;
+    background-color:#fff;
+    width: 25rem;
+    opacity: 0.8;
+    position: absolute;
+    top:400px;
+    left:60px;
+    padding: 0.2rem;
 }
 .banner-heading{
     font-size: 3rem;
     padding-bottom: 2rem;
     font-weight: 500;
 }
+
+.goods-banners{
+    display: flex;
+    }
+.goods-banner{
+    position: relative;
+    color:#fff; 
+}
+.goods-banner img{
+    width: 50rem;
+    height: 60rem;
+    background-size: cover;
+}
+.group__dsc{
+    position: absolute;
+    top:45%;
+    left:30%;
+    font-size: 5rem;
+    font-weight: 800;
+}
+.shop-items{
+    margin-bottom: 2rem;
+}
+
+.items-list{
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0,1fr));
+    gap:2rem;
+}
+.card img{
+   height: 40rem;
+   width: auto;
+   margin-bottom: 1rem;
+}
+.card{
+    display: flex;
+    flex-direction: column;
+}
+.card__price{
+    display: flex;
+    margin-bottom: 1rem;
+}
+.price__reduced{
+    margin-left: 1.5rem;
+    text-decoration: line-through;
+}
+.card__button{
+    width:8rem;
+    padding: 0.5rem 1rem;
+    background-color: #C27664;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.3rem;
+
+}
+.section-heading{
+    padding: 5rem;
+    text-align: center;
+    font-size: 5rem;
+}
 /* main section ends here  */
+
+
+/* footer section starts here  */
+#main-footer{
+    background-color: #B05A7A;
+    height: 15vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* footer section ends here  */
