--- a/style.css
+++ b/style.css
@@ -160,18 +160,17 @@ background-size: cover;
     margin-top: 1%;
     text-align: center;
     margin-bottom: 1%;
+    border-bottom: 1px solid gray;
 }
 .products{
   display: flex;
   justify-content: space-evenly;
    width: 100%;
   height: 20rem;
-  overflow: hidden;
- 
 }
 .product{
-    overflow: hidden;
-    display: block;
+margin-top: 4%;
+display: block;
  border-radius:7px ;
  -webkit-border-radius:7px ;
  -moz-border-radius:7px ;
@@ -184,20 +183,12 @@ background-size: cover;
     -o-transition: all 1s ease-in-out;
 }
 
-.ring{
-    border-radius: var(--btn-border-radius);
-    -webkit-border-radius: var(--btn-border-radius);
-    -moz-border-radius: var(--btn-border-radius);
-    -ms-border-radius: var(--btn-border-radius);
-    -o-border-radius: var(--btn-border-radius);
-   
-}
 .product:hover{
-    transform: translate(10px, 12px);
-    -webkit-transform: translate(10px, 12px);
-    -moz-transform: translate(10px, 12px);
-    -ms-transform: translate(10px, 12px);
-    -o-transform: translate(10px, 12px);
+    transform: translate(-10px, -12px);
+    -webkit-transform: translate(-10px, -12px);
+    -moz-transform: translate(-10px, -12px);
+    -ms-transform: translate(-10px, -12px);
+    -o-transform: translate(-10px, -12px);
 }
 
 .main__iframe{
